@@ -70,7 +70,6 @@
         <UL>
           <LI><A HREF="configure.html#dspacecfg">The <code>dspace.cfg</code> Configuration Properties File</A></LI>
           <LI><A HREF="configure.html#email">Wording of E-mail Messages</A></LI>
-          <LI><A HREF="configure.html#admincontact">Local DSpace Administrator Contact Information</A></LI>
           <LI><A HREF="configure.html#registries">The Dublin Core and Bitstream Format Registries</A></LI>
           <LI><A HREF="configure.html#license">The Default Submission License</A></LI>
           <LI><A HREF="configure.html#crosswalks">Activating Additional OAI-PMH Crosswalks</A></LI>
